# Find the xtensor bits.
find_package(xtensor REQUIRED CONFIG)
find_package(xtensor-blas REQUIRED CONFIG)

add_library(heyoka_test STATIC catch_main.cpp spdlog_oss.cpp test_utils.cpp)
target_compile_options(heyoka_test PRIVATE
  "$<$<CONFIG:Debug>:${HEYOKA_CXX_FLAGS_DEBUG}>"
  "$<$<CONFIG:Release>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  "$<$<CONFIG:RelWithDebInfo>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  "$<$<CONFIG:MinSizeRel>:${HEYOKA_CXX_FLAGS_RELEASE}>"
)

# Setup the C++ standard.
target_compile_features(heyoka_test PRIVATE cxx_std_17)
set_property(TARGET heyoka_test PROPERTY CXX_EXTENSIONS NO)
target_link_libraries(heyoka_test PRIVATE spdlog::spdlog heyoka)

function(ADD_HEYOKA_TESTCASE arg1)
  add_executable(${arg1} ${arg1}.cpp)
  target_link_libraries(${arg1} PRIVATE heyoka_test heyoka xtensor xtensor-blas fmt::fmt heyoka_llvm_internal Boost::boost)
  target_compile_definitions(${arg1} PRIVATE XTENSOR_USE_FLENS_BLAS)
  target_compile_options(${arg1} PRIVATE
    "$<$<CONFIG:Debug>:${HEYOKA_CXX_FLAGS_DEBUG}>"
    "$<$<CONFIG:Release>:${HEYOKA_CXX_FLAGS_RELEASE}>"
    "$<$<CONFIG:RelWithDebInfo>:${HEYOKA_CXX_FLAGS_RELEASE}>"
    "$<$<CONFIG:MinSizeRel>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  )
  # Setup the C++ standard.
  target_compile_features(${arg1} PRIVATE cxx_std_17)
  set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
  add_test(${arg1} ${arg1})
endfunction()

ADD_HEYOKA_TESTCASE(readme_test)
ADD_HEYOKA_TESTCASE(llvm_state)
ADD_HEYOKA_TESTCASE(expression)
ADD_HEYOKA_TESTCASE(expression_diff_tensors)
ADD_HEYOKA_TESTCASE(expression_folding)
ADD_HEYOKA_TESTCASE(expression_fix)
ADD_HEYOKA_TESTCASE(expression_normalise)
ADD_HEYOKA_TESTCASE(func)
# ADD_HEYOKA_TESTCASE(gp)
ADD_HEYOKA_TESTCASE(callable)
ADD_HEYOKA_TESTCASE(variable)
ADD_HEYOKA_TESTCASE(param)
ADD_HEYOKA_TESTCASE(taylor_adaptive)
ADD_HEYOKA_TESTCASE(taylor_t_event)
ADD_HEYOKA_TESTCASE(taylor_nt_event)
ADD_HEYOKA_TESTCASE(taylor_adaptive_batch)
ADD_HEYOKA_TESTCASE(taylor_decompose)
ADD_HEYOKA_TESTCASE(taylor_add_jet)
ADD_HEYOKA_TESTCASE(taylor_div)
ADD_HEYOKA_TESTCASE(taylor_erf)
ADD_HEYOKA_TESTCASE(taylor_exp)
ADD_HEYOKA_TESTCASE(taylor_log)
ADD_HEYOKA_TESTCASE(taylor_mul)
ADD_HEYOKA_TESTCASE(taylor_pow)
ADD_HEYOKA_TESTCASE(taylor_sqrt)
ADD_HEYOKA_TESTCASE(taylor_square)
ADD_HEYOKA_TESTCASE(taylor_sincos)
ADD_HEYOKA_TESTCASE(taylor_const_sys)
ADD_HEYOKA_TESTCASE(taylor_no_decomp_sys)
ADD_HEYOKA_TESTCASE(taylor_tan)
ADD_HEYOKA_TESTCASE(taylor_time)
ADD_HEYOKA_TESTCASE(taylor_asin)
ADD_HEYOKA_TESTCASE(taylor_acos)
ADD_HEYOKA_TESTCASE(taylor_atan)
ADD_HEYOKA_TESTCASE(taylor_atan2)
ADD_HEYOKA_TESTCASE(taylor_sigmoid)
ADD_HEYOKA_TESTCASE(taylor_sinhcosh)
ADD_HEYOKA_TESTCASE(taylor_tanh)
ADD_HEYOKA_TESTCASE(taylor_asinh)
ADD_HEYOKA_TESTCASE(taylor_acosh)
ADD_HEYOKA_TESTCASE(taylor_atanh)
ADD_HEYOKA_TESTCASE(taylor_neg)
ADD_HEYOKA_TESTCASE(taylor_kepE)
ADD_HEYOKA_TESTCASE(taylor_kepF)
ADD_HEYOKA_TESTCASE(taylor_constants)
ADD_HEYOKA_TESTCASE(taylor_sum)
ADD_HEYOKA_TESTCASE(taylor_sum_sq)
ADD_HEYOKA_TESTCASE(taylor_num_identity)
ADD_HEYOKA_TESTCASE(taylor_prod)
ADD_HEYOKA_TESTCASE(taylor_sub)
ADD_HEYOKA_TESTCASE(two_body)
ADD_HEYOKA_TESTCASE(two_body_batch)
ADD_HEYOKA_TESTCASE(e3bp)
ADD_HEYOKA_TESTCASE(fast_math_compare)
ADD_HEYOKA_TESTCASE(back_and_forth)
ADD_HEYOKA_TESTCASE(outer_ss)
ADD_HEYOKA_TESTCASE(one_body)
ADD_HEYOKA_TESTCASE(number)
ADD_HEYOKA_TESTCASE(erf)
ADD_HEYOKA_TESTCASE(exp)
ADD_HEYOKA_TESTCASE(log)
ADD_HEYOKA_TESTCASE(sigmoid)
ADD_HEYOKA_TESTCASE(pow)
ADD_HEYOKA_TESTCASE(neg)
ADD_HEYOKA_TESTCASE(cos)
ADD_HEYOKA_TESTCASE(sin)
ADD_HEYOKA_TESTCASE(sqrt)
ADD_HEYOKA_TESTCASE(square)
ADD_HEYOKA_TESTCASE(acos)
ADD_HEYOKA_TESTCASE(asin)
ADD_HEYOKA_TESTCASE(atan)
ADD_HEYOKA_TESTCASE(atan2)
ADD_HEYOKA_TESTCASE(acosh)
ADD_HEYOKA_TESTCASE(asinh)
ADD_HEYOKA_TESTCASE(atanh)
ADD_HEYOKA_TESTCASE(cosh)
ADD_HEYOKA_TESTCASE(sinh)
ADD_HEYOKA_TESTCASE(tan)
ADD_HEYOKA_TESTCASE(tanh)
ADD_HEYOKA_TESTCASE(kepE)
ADD_HEYOKA_TESTCASE(kepDE)
ADD_HEYOKA_TESTCASE(kepF)
ADD_HEYOKA_TESTCASE(sum)
ADD_HEYOKA_TESTCASE(sum_sq)
ADD_HEYOKA_TESTCASE(prod)
ADD_HEYOKA_TESTCASE(div)
ADD_HEYOKA_TESTCASE(sub)
ADD_HEYOKA_TESTCASE(time)
ADD_HEYOKA_TESTCASE(wavy_ramp)
ADD_HEYOKA_TESTCASE(dfloat_time)
ADD_HEYOKA_TESTCASE(timestep_check)
ADD_HEYOKA_TESTCASE(llvm_helpers)
ADD_HEYOKA_TESTCASE(simplification)
ADD_HEYOKA_TESTCASE(vsop2013)
ADD_HEYOKA_TESTCASE(constants)
ADD_HEYOKA_TESTCASE(event_detection)
ADD_HEYOKA_TESTCASE(batch_event_detection)
ADD_HEYOKA_TESTCASE(c_output)
ADD_HEYOKA_TESTCASE(ensemble_propagate)
ADD_HEYOKA_TESTCASE(parallel_mode)
ADD_HEYOKA_TESTCASE(opt_checks)
ADD_HEYOKA_TESTCASE(poly_enclosures)
ADD_HEYOKA_TESTCASE(function_decompose)
ADD_HEYOKA_TESTCASE(model_pendulum)
ADD_HEYOKA_TESTCASE(model_nbody)
ADD_HEYOKA_TESTCASE(model_fixed_centres)
ADD_HEYOKA_TESTCASE(model_rotating)
ADD_HEYOKA_TESTCASE(model_mascon)
ADD_HEYOKA_TESTCASE(model_cr3bp)
ADD_HEYOKA_TESTCASE(step_callback)
ADD_HEYOKA_TESTCASE(llvm_state_mem_cache)

if(HEYOKA_WITH_MPPP AND mp++_WITH_MPFR)
  ADD_HEYOKA_TESTCASE(event_detection_mp)
  ADD_HEYOKA_TESTCASE(taylor_adaptive_mp)
  ADD_HEYOKA_TESTCASE(ensemble_propagate_mp)
  ADD_HEYOKA_TESTCASE(parallel_mode_mp)
  ADD_HEYOKA_TESTCASE(taylor_add_jet_mp)
  ADD_HEYOKA_TESTCASE(taylor_trig_mp)
  ADD_HEYOKA_TESTCASE(taylor_hyper_mp)
  ADD_HEYOKA_TESTCASE(taylor_exp_log_mp)
  ADD_HEYOKA_TESTCASE(taylor_unary_arith_mp)
  ADD_HEYOKA_TESTCASE(taylor_constants_mp)
  ADD_HEYOKA_TESTCASE(taylor_roots_pow_mp)
  ADD_HEYOKA_TESTCASE(taylor_sums_mp)
  ADD_HEYOKA_TESTCASE(taylor_other_mp)
  ADD_HEYOKA_TESTCASE(taylor_kepE_mp)
  ADD_HEYOKA_TESTCASE(taylor_time_f_mp)
endif()
