set(HEYOKA_ERFA_SRC_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/a2af.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/a2tf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ab.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ae2hd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/af2a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/anp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/anpm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apcg13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apcg.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apci13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apci.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apco13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apco.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apcs13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apcs.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/aper13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/aper.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apio13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/apio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atcc13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atccq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atci13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atciq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atciqn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atciqz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atco13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atic13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/aticq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/aticqn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atio13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atioq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atoc13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atoi13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/atoiq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/bi00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/bp00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/bp06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/bpn2xy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2i00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2i00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2i06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2ibpn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2ixy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2ixys.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2t00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2t00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2t06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2tcio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2teqx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2tpe.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/c2txy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/cal2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/cp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/cpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/cr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/d2dtf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/d2tf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/dat.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/dtdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/dtf2d.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eceq06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ecm06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ee00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ee00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ee00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ee06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eect00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eform.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eo06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eors.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/epb2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/epb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/epj2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/epj.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/epv00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eqec06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/eqeq94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/era00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/erfadatextra.c"
    # "${CMAKE_CURRENT_SOURCE_DIR}/erfaversion.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fad03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fae03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/faf03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/faju03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fal03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/falp03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fama03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fame03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fane03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/faom03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fapa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fasa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/faur03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fave03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk425.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk45z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk524.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk52h.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk54z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk5hip.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fk5hz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fw2m.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/fw2xy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/g2icrs.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gc2gd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gc2gde.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gd2gc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gd2gce.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gmst00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gmst06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gmst82.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gst00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gst00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gst06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gst06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/gst94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/h2fk5.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/hd2ae.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/hd2pa.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/hfk5z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/icrs2g.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ir.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/jd2cal.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/jdcalf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ld.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ldn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ldsun.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/lteceq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ltecm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/lteqec.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ltpb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ltp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ltpecl.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ltpequ.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/moon98.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/num00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/num00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/num06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/numat.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/nut00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/nut00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/nut06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/nut80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/nutm80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/obl06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/obl80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/p06e.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/p2pv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/p2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pap.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pas.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pb06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pdp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pfw06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/plan94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmat00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmat06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmat76.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmpx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pmsafe.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pnm00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pnm00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pnm06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pnm80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pom00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ppp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ppsp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pr00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/prec76.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pv2p.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pv2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvdpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvmpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvppv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvstar.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvtob.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvu.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvup.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pvxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/pxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/refco.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rm2v.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rv2m.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rxr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ry.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/rz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s2c.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s2p.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s2pv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/s2xpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/sepp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/seps.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/sp00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/starpm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/starpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/sxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/sxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/taitt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/taiut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/taiutc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tcbtdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tcgtt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tdbtcb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tdbtt.c"
    # "${CMAKE_CURRENT_SOURCE_DIR}/t_erfa_c.c"
    # "${CMAKE_CURRENT_SOURCE_DIR}/t_erfa_c_extra.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tf2a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tf2d.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tpors.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tporv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tpsts.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tpstv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tpxes.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tpxev.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/trxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/trxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tttai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tttcg.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tttdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ttut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ut1tai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ut1tt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/ut1utc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/utctai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/utcut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/xy06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/xys00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/xys00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/xys06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/zp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/zpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/zr.c"
)

add_library(heyoka_erfa STATIC "${HEYOKA_ERFA_SRC_FILES}")

# Compile in C99 mode.
target_compile_features(heyoka_erfa PRIVATE c_std_99)
# Enforce vanilla C.
set_property(TARGET heyoka_erfa PROPERTY C_EXTENSIONS NO)

# IPO setup.
if(HEYOKA_ENABLE_IPO)
    if (_HEYOKA_IPO_RESULT)
        set_property(TARGET heyoka_erfa PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
endif()
